[package]
name = "mailer"
version = "0.1.0"
edition = "2021"

[dependencies]
bson = "2.13.0"
futures-lite = "2.4.0"
hostname = "0.4.0"
lapin = "2.5.0"
lettre = "0.11.10"
num_cpus = "1.16.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tokio-retry = "0.3.0"
